--- a/tags.html
+++ b/tags.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8">
     <title>HTML Tags</title>
   </head>
-    <body>
+    <body <div>
+      <a href="index.html">Home</a>
+      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html">HTML Tags</a>
+    </div>
     <h1>Important HTML tags</h1>
 
       <img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper">
