--- a/tags.html
+++ b/tags.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <title>HTML Tags</title>
   </head>
-    <body <div>
+    <body>
+      <div>
       <a href="index.html">Home</a>
+        <a href="tags.html">HTML Tags</a>
       <a href="moby_dick.html">Moby Dick</a>
-      <a href="tags.html">HTML Tags</a>
+      
     </div>
     <h1>Important HTML tags</h1>
 
