--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Learn Enough to Be Dangerous</title>
+    <link rel="stylesheet" href="css/main.css">
+
+
   </head>
   <body>
-    <div>
-      <a href="index.html">Home</a>
-        <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
-      
-    </div>
+    <div id="main-nav" class="nav-menu">
+<a href="index.html">Home</a>
+<a href="tags.html" class= "nav-spacing">HTML Tags</a>
+<a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
+</div>
     <h1>The Learn Enough Story</h1>
     <p>
       Learn Enough to Be Dangerous is a leader in the movement to teach
@@ -39,6 +41,20 @@
     </p>
 
     <img src="images/kitten.jpg" alt="An adorable kitten">
+    <h1>Quotations</h1>
+
+        <p>
+          In addition to hosting most of the world's supply of kitten videos, the
+          Web is also full of inspiring quotes, perhaps none more so than this one:
+        </p>
+
+        <blockquote style="padding: 2px 20px; background: #D3D3D3;">
+          <p>
+            <em>Don't believe every quote you read on the Internet.</em>
+            <br>
+            —Abraham Lincoln
+          </p>
+        </blockquote>
 
     <h2>Background</h2>
     <p>
