--- a/tags.html
+++ b/tags.html
@@ -5,12 +5,11 @@
     <title>HTML Tags</title>
   </head>
     <body>
-      <div>
-      <a href="index.html">Home</a>
-        <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
-      
-    </div>
+      <div style="text-align: right;">
+<a href="index.html" style="text-decoration: none; color: blue;">Home</a>
+<a href="tags.html" style="margin: 0 0 0 10px; text-decoration: none; color: blue;">HTML Tags</a>
+<a href="moby_dick.html" style="margin: 0 0 0 10px; text-decoration: none; color: blue;">Moby Dick</a>
+</div>
     <h1>Important HTML tags</h1>
 
       <img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper">
